Filled in Relevant Info

--- a/index.html
+++ b/index.html
@@ -57,20 +57,18 @@
           <h6>Myself</h6>
         </div>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-          Aspernatur sint tenetur fuga pariatur tempore quibusdam quae harum illo, 
-          laborum ipsa excepturi! Dignissimos cumque reprehenderit repellat autem, 
-          inventore laborum sequi illo? Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+          Developer with a passion for web application development, experienced in working on projects using Scrum and Agile processes. 
+          Currently looking for opportunities to work in a development team dedicated to driving innovation and expanding skill sets.
         </p>
         <div class="social-media">
             <ul class="nav-list">
               <li>
-                <a href="#" class="icon-link">
+                <a href="https://www.linkedin.com/in/ruth-agbasimalo-18a46374/" class="icon-link">
                   <i class="fab fa-linkedin"></i>
                 </a>
               </li>
               <li>
-                <a href="#" class="icon-link">
+                <a href="https://github.com/ruth-naza" class="icon-link">
                   <i class="fab fa-github-square"></i>
                 </a>
               </li>
@@ -80,7 +78,7 @@
                 </a>
               </li>
               <li>
-                <a href="#" class="icon-link">
+                <a href="mailto:ruthagbas@gmail.com" class="icon-link">
                   <i class="fas fa-envelope-square"></i>
                 </a>
               </li>
@@ -148,21 +146,19 @@
           <img src="./images/port1.png" alt="">
         </div>
         <div class="portfolio-description" data-aos="fade-left" data-aos-delay="600">
-          <h1>Facial Recognition App</h1>
+          <h1>Recka Facial Recognition App</h1>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-            Assumenda asperiores quod aperiam explicabo praesentium consectetur.
-          <a href="#" class="cta">View Project</a>
+            Consumed the Clarifai API to build a simple facial recognition app using Postgres and Express for user authentication and database management.
+          <a href="https://recka.herokuapp.com/" class="cta">View Project</a>
         </div>
       </div>
       <div class="portfolio-item">
         <div class="portfolio-description has-margin-right" data-aos="fade-right" data-aos-delay="900">
           <h1>Card Matching Game</h1>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-            Assumenda asperiores quod aperiam explicabo praesentium consectetur.
+            Made a simple card matching game using pure react to learn to create components and state management in react.
           </p>
-          <a href="#" class="cta">View Project</a>
+          <a href="https://cardino.netlify.com" class="cta">View Project</a>
         </div>
         <div class="portfolio-img" data-aos="fade-left" data-aos-delay="1200">
           <img src="./images/port2.png" alt="">
@@ -175,49 +171,47 @@
         <div class="portfolio-description" data-aos="fade-left" data-aos-delay="1800">
           <h1>Rock Paper Scissors</h1>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-            Assumenda asperiores quod aperiam explicabo praesentium consectetur odit.
+            Created a Rock Paper Scissors Game to learn Javascript DOM Manipulation
           </p>
-          <a href="#" class="cta">View Project</a>
+          <a href="https://dazzling-ptolemy-99b878.netlify.com/" class="cta">View Project</a>
         </div>
       </div>
       <div class="portfolio-item">
         <div class="portfolio-description has-margin-right" data-aos="fade-right" data-aos-delay="2100">
-          <h1>Facial Recognition App</h1>
+          <h1>ZAVAN</h1>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-            Assumenda asperiores quod aperiam explicabo.
+            A Flight Itinerary App that helps users plan an organized vacation or business trip by helping them keep to deadlines 
+            and keeping copies of important document securely. This app is built mainly using react, redux and firebase. 
+            Currently working on it.
           </p>
           <a href="#" class="cta">View Project</a>
         </div>
         <div class="portfolio-img" data-aos="fade-left" data-aos-delay="2400">
-          <img src="./images/port1.png" alt="">
+          <img src="./images/port4.png" alt="">
         </div>
       </div>
       <div class="portfolio-item">
         <div class="portfolio-img has-margin-right" data-aos="fade-right" data-aos-delay="2700">
-          <img src="./images/port2.png" alt="">
+          <img src="./images/port5.png" alt="">
         </div>
         <div class="portfolio-description" data-aos="fade-left" data-aos-delay="3000">
-          <h1>Card Matching Game</h1>
+          <h1>Flight Booking App</h1>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-            Assumenda asperiores quod aperiam explicabo praesentium.
+            A simple flight booking app made using ruby on rails with based user authentication and simple SQL database calls.
           </p>
-          <a href="#" class="cta">View Project</a>
+          <a href="https://ruth-flyapp.herokuapp.com/" class="cta">View Project</a>
         </div>
       </div>
       <div class="portfolio-item">
         <div class="portfolio-description has-margin-right" data-aos="fade-right" data-aos-delay="2700">
-          <h1>Rock Paper Scissors</h1>
+          <h1>Portfolio</h1>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-            Assumenda asperiores quod aperiam explicabo praesentium.
+            Created this portfolio using Pure html and CSS, no framework used, to learn how to create responsive websites using media queries.
           </p>
           <a href="#" class="cta">View Project</a>
         </div>
         <div class="portfolio-img" data-aos="fade-left" data-aos-delay="3000">
-          <img src="./images/port3.png" alt="">
+          <img src="./images/port6.png" alt="">
         </div>
       </div>
     </div>
@@ -232,27 +226,21 @@
       <div class="timeline" data-aos="fade-down" data-aos-delay="300">
         <ul>
           <li class="date" data-date='01/2019 - Present'>
-            <h1>Open Source Projects</h1>
+            <h1>Personal Projects</h1>
             <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-              Quaerat nisi hic suscipit nemo. Pariatur voluptatem praesentium veritatis reiciendis 
-              nam eaque blanditiis cupiditate quas modi eos optio rem neque, cumque facilis!
+              Created multiple personal projects to broaden my knowledge of various technologies. Projects can be viewed above. Source code is hosted on Github.
             </p>
           </li>
-          <li class="date" data-date='07/2016 - Present'>
+          <li class="date" data-date='07/2016 - 12/2018'>
             <h1>Aislinn Group</h1>
             <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-              Quaerat nisi hic suscipit nemo. Pariatur voluptatem praesentium veritatis reiciendis 
-              nam eaque blanditiis cupiditate quas modi eos optio rem neque, cumque facilis!
+              Maintained website including content updates, account administration, debugging, feature enhancements and regular upgrades to ensure web security and system usability.
             </p>
           </li>
           <li class="date" data-date='08/2015 - 03/2016'>
             <h1>Andela</h1>
             <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-              Quaerat nisi hic suscipit nemo. Pariatur voluptatem praesentium veritatis reiciendis 
-              nam eaque blanditiis cupiditate quas modi eos optio rem neque, cumque facilis!
+              Collaborated with peers and senior-level developers on a Task management app (Workdey) throughout various phases of project life-cycle.
             </p>
           </li>
         </ul>
