Added netlify form submission

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
         <h1>Contact</h1>
         <h6>Interested in working with me? Let's Talk!</h6>
       </div>
-      <form action="" data-aos="fade-up" data-aos-delay="300">
+      <form action="" data-aos="fade-up" data-aos-delay="300" netlify>
         <label for="name">Name:</label>
         <input type="text" id='name' name="name" placeholder="Enter your name..." required>
         <label for="email">Email:</label>
